# Game-Of-Life

./: CMakeLists.txt  dupa.md
include/: GOL.h
src/: GOL.cpp  GOL.h  a.out  application.h  main.cpp  menutest.cpp  population.cpp
